# pypoker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: action_pr_master.yml  action_pr_master_developr.yml
docs/: version_history.md
pypoker/: deck.py
pypoker/poker_engine/: hand_solver.py
src/: pypoker.py
src/pypoker/: __init__.py  constants.py  constructs.py  deck.py  exceptions.py
src/pypoker/engine/: __init__.py  texas_holdem.py
src/pypoker/engine/hand_logic/: __init__.py  base.py  texas_holdem.py  utils.py
src/pypoker/engine/hand_solver/: base.py  constants.py  texas_holdem.py  utils.py
src/pypoker/engine/logic/: texas_holdem.py
src/pypoker/engine/texas_holdem/: __init__.py  find_odds.py  find_outs.py  make_hands.py
src/pypoker/engine2/: __init__.py  texas_holdem.py
src/pypoker/player/: __init__.py  base.py  human.py
src/pypoker/poker_engine/: hand_solver.py
src/pypoker/poker_engine/hand_solver/: __init__.py  base.py  constants.py  texas_holdem.py
src/pypoker/runner/: __init__.py
test/unit/: test_deck.py
test/unit/poker_engine/: test_hand_solver.py
tests/fixtures/: cards.py
tests/unit/: conftest.py  test_constructs.py  test_deck.py
tests/unit/engine/: test_base_engine.py  test_texas_holdem_engine.py
tests/unit/engine/hand_solver/: test_base.py  test_texas_holdem.py  test_utils.py
tests/unit/engine/logic/: test_texas_holdem.py
tests/unit/engine/texas_holdem/: test_find_odds.py  test_find_outs.py  test_make_hands.py  (+1 more)
tests/unit/player/: test_base.py  test_human.py
tests/unit/poker_engine/: test_hand_solver.py
(+29 files in other folders)
