[tool.poetry]
name = "pypoker"
version = "0.2.0"
description = "Python poker game + logic engine"
authors = ["Matt Mulligan <matt@mattmulligan.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-bdd = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
