[tool.poetry]
name = "pypoker"
version = "0.2.0"
description = "Python poker game + logic engine"
authors = ["Matt Mulligan <matt@mattmulligan.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
pytest-bdd = "^5.0.0"
coverage = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
